@@ -391,6 +391,11 @@
 # outside of the mechanisms provided by MQTT.
 #require_certificate false
 
+# If set true, disable_client_cert_date_checks will change the certificate
+# verification behaviour to allow client certificates that are expired or are
+# not yet valid, when using `require_certificate true`.
+#disable_client_cert_date_checks false
+
 # cafile and capath define methods of accessing the PEM encoded
 # Certificate Authority certificates that will be considered trusted when
 # checking incoming client certificates.
